# speed_daemon

./: Dockerfile
.github/workflows/: publish-docker.yml
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  manager.rs
server/tests/: heartbeat.rs
shared/: Cargo.toml
shared/src/: messages.rs  network.rs
