[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
shared = { path = "../shared" }
tokio = { version = "1.44.1", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.36", features = ["derive"] }
